<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".presentation.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/txtPlotTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/synopsis"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txtRelease" />

        <TextView
            android:id="@+id/txtGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="?colorOnBackground"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/txtGenreTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtGenreTitle"
            tools:text="Action, Adventure" />

        <TextView
            android:id="@+id/txtGenreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:text="@string/genre"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txtReleaseDateTitle" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:progressTint="@color/yellow"
            android:rating="4.5"
            app:layout_constraintBottom_toBottomOf="@+id/txtRuntime"
            app:layout_constraintStart_toEndOf="@+id/txtRuntime"
            app:layout_constraintTop_toTopOf="@+id/txtRuntime" />

        <TextView
            android:id="@+id/txtRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="?colorOnBackground"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/txtRuntime"
            tools:text="7.5 (IMDb)" />

        <TextView
            android:id="@+id/txtRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="?colorOnBackground"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/imvClock"
            app:layout_constraintStart_toEndOf="@+id/imvClock"
            app:layout_constraintTop_toTopOf="@+id/imvClock"
            tools:text="126 min" />

        <!-- Divider -->

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_below="@id/txtRuntime"
            android:layout_marginTop="20dp"
            android:background="#515151"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txtRuntime" />

        <TextView
            android:id="@+id/txtReleaseDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/release_date"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/txtRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?colorOnBackground"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txtReleaseDateTitle"
            tools:text="23 Jun 1989" />

        <TextView
            android:id="@+id/txtPlot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#BCBCBC"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txtPlotTitle"
            tools:text="The Dark Knight of Gotham City begins his war on crime with his first major enemy being Jack Napier, a criminal who becomes the clownishly homicidal Joker." />

        <ImageView
            android:id="@+id/imvPoster"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:contentDescription="@string/poster_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <View
            android:id="@+id/gradientOverlay"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintBottom_toBottomOf="@+id/imvPoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtMovieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="?colorOnBackground"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/imvPoster"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            tools:text="The Dark Knight" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <ImageView
            android:id="@+id/imvClock"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_clock"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imvPoster"
            app:tint="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="?attr/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/errorView"
            layout="@layout/error_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>